# sds_matrix

./: -lh CRAWL4AI_COMPLETION.md CRAWL4AI_FINAL_SUMMARY.md CRAWL4AI_GUIDE.md CRAWL4AI_QUICK_REFERENCE.md CRAWL4AI_QUICKSTART.md CRAWL4AI_SETUP_GUIDE.md CRAWL4AI_README.txt  .env.crawl4ai  .env.local.example  .env.performance  .gitignore  .pre-commit-config.yaml  ABAS_ALTURA_IGUAL.md  ATUALIZACAO_ABAS.md  BUS_ERROR_FIX.md  CAMPOS_ATUALIZADOS_DESTAQUE.md  CI_CD_GUIDE.md  CI_CD_SUMMARY.md  COMPLETION_SUMMARY.md  CONFIGURACAO_ATUAL.md  CONTRIBUTING.md  COPILOT_CONTEXT.md  CRAWL4AI_COMPLETION.md  CRAWL4AI_CONFIG_USAGE.md  CRAWL4AI_FINAL_SUMMARY.md  CRAWL4AI_GUIDE.md  CRAWL4AI_QUICKSTART.md  CRAWL4AI_QUICK_REFERENCE.md  CRAWL4AI_README.txt  CRAWL4AI_SETUP_GUIDE.md  EVALUATION_GUIDE.md  EXECUTIVE_SUMMARY.md  FINAL_CHECKLIST.md  FINAL_PROJECT_COMPLETION_REPORT.md  GEMINI_SETUP.md  GETTING_STARTED.md  IMPROVEMENTS.md  INICIO_RAPIDO.md  INSTALL.md  INTEGRATED_PROGRESS_BAR.md  IP_BAN_PREVENTION.md  IP_BAN_QUICK_REFERENCE.md  MELHORIAS_FINAIS_ABAS.md  MELHORIAS_INTERFACE.md  MELHORIAS_JANELA_PROGRESSO.md  MIGRATION_TAVILY_TO_SEARXNG.md  (+58 more)
.github/workflows/: release.yml  tests.yml
Base FDS/FDS - Almoxarifado/FDS ALMOXARIFADO AGRICOLA/: FDS FALTANTES.xlsx
Base FDS/FDS - Almoxarifado/FDS ALMOXARIFADO INDUSTRIAL/: ELETRODO FALTA FDS.xlsx
Base FDS/FDS - Almoxarifado/FDS ATUALIZADAS INSUMOS/: FDS FALTANTES.xlsx
Base FDS/FDS - Almoxarifado/FDS BAIA 02/: FDS FALTANTES.xlsx
Base FDS/FDS - Almoxarifado/FDS BAIA 03/: FDS FALTANTES.xlsx
Base FDS/FDS - Almoxarifado/FISPQ AGROQUIMICO/: FISPQ-Agefix.pdf.crdownload
data/: ground_truth_template.json  results.csv  results.xlsx
data/config/: app_state.json
data/duckdb/: extractions.db  extractions.db.wal
data/vectorstore_test/: chroma.sqlite3
docs/: UPDATES_V2.1.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_0618756b1ff51bca___init___py.html  z_0618756b1ff51bca_chunk_strategy_py.html  z_0618756b1ff51bca_document_processor_py.html  z_0618756b1ff51bca_heuristics_py.html  z_0618756b1ff51bca_llm_client_py.html  z_0618756b1ff51bca_queue_manager_py.html  z_0618756b1ff51bca_validator_py.html  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_cli_py.html  z_4bd13995f84fa56f___init___py.html  z_4bd13995f84fa56f_base_extractor_py.html  z_4bd13995f84fa56f_pdf_extractor_py.html  z_52a9556a292fb197___init___py.html  z_52a9556a292fb197_main_app_py.html  z_6156a86a215061be___init___py.html  z_6156a86a215061be_config_py.html  z_6156a86a215061be_file_utils_py.html  z_6156a86a215061be_logger_py.html  z_67d056e3707ef46d___init___py.html  z_67d056e3707ef46d_duckdb_manager_py.html  z_757c9300a46cf488___init___py.html  z_757c9300a46cf488_exporters_py.html  z_7675e61a69a6135e___init___py.html  z_7675e61a69a6135e_main_app_py.html  z_7b89ceae992477cc___init___py.html  z_7b89ceae992477cc_base_extractor_py.html  z_7b89ceae992477cc_pdf_extractor_py.html  z_bccfd8add455197f___init___py.html  z_bccfd8add455197f_exporters_py.html  z_ce21df766c911d41___init___py.html  z_ce21df766c911d41_chunk_strategy_py.html  z_ce21df766c911d41_document_processor_py.html  z_ce21df766c911d41_heuristics_py.html  z_ce21df766c911d41_llm_client_py.html  z_ce21df766c911d41_queue_manager_py.html  z_ce21df766c911d41_validator_py.html  (+6 more)
installer/: fds_reader.iss
project/: items.py  middlewares.py  pipelines.py  settings.py
scripts/: build_exe.ps1  create_shortcut.ps1  export_results.py  fix_intel_ipu6_dkms.sh  process_examples.py
searxng/: settings.yml
src/: cli.py
src/core/: __init__.py  chunk_strategy.py  document_processor.py  field_cache.py  field_retrieval.py  heuristics.py  llm_client.py  online_enrichment.py  queue_manager.py  searxng_client.py  validator.py  vector_store.py
src/database/: __init__.py  duckdb_manager.py
src/evaluation/: __init__.py  evaluate_extraction.py  metrics.py
src/export/: __init__.py  exporters.py
src/extractors/: __init__.py  base_extractor.py  pdf_extractor.py
src/gui/: __init__.py  main_app.py
src/utils/: __init__.py  config.py  file_utils.py  logger.py  onu_lookup.py  url_validator.py
tests/: README.md  __init__.py  conftest.py  test_bug_reproduction.py  test_document_processor.py  test_edge_cases.py  test_gemini_client.py  test_heuristics.py  test_new_fields.py  test_searxng_client.py  test_tavily_client.py  test_validator.py
