[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fds-reader"
version = "2.1.0"
description = "Leitor de Fichas de Dados de Segurança com extração heurística e busca online (Gemini/LM Studio)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "FDS Reader Team" }
]
keywords = ["fds", "pdf", "tkinter", "duckdb", "gemini", "lm-studio", "extraction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications :: GTK",
    "Topic :: Text Processing :: Filters",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "tkinter-tooltip==2.1.0",
    "pdfplumber==0.10.3",
    "python-docx==1.1.0",
    "beautifulsoup4==4.12.2",
    "lxml>=5.2.0",
    "markdown==3.5.1",
    "Pillow==11.0.0",
    "pytesseract==0.3.10",
    "pdf2image==1.16.3",
    "openai==1.3.7",
    "httpx==0.27.2",
    "duckdb>=1.2.0",
    "SQLAlchemy==2.0.23",
    "pydantic>=2.10.0",
    "openpyxl==3.1.2",
    "python-dotenv==1.0.0",
    "tqdm==4.66.1",
    "chardet==5.2.0",
    "aiofiles==23.2.1",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-mock==3.12.0",
]

[project.scripts]
fds-reader = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=html",
    "--cov-report=term-missing",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
